plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.8'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
	compile group: 'org.beanshell', name: 'bsh-core', version: '2.0b4'
}

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.fxml','javafx.base','javafx.graphics','javafx.media' ]
}

jar {
    manifest {
        attributes 'MainApp': 'org.frontend.MainApp'
    }
}

run {
    if (javafx.platform.classifier == 'win') {
        // Temporal fix for Eclipse with JDK 1.8 and Windows 
        systemProperty "java.library.path", "C:\tmp"
    }
}

//A changer avec notre main class
mainClassName = 'org.frontend.MainApp'

version = '11.0.6'